- Make numbered #toc work without programming rights - Cleanup compiler warnings
Merged from trunk


git-svn-id: https://svn.xwiki.org/svnroot/xwiki/xwiki/branches/XWIKI_1_0@2734 f329d543-caf0-0310-9063-dda96c69346f